--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
         <div class="languages-list">
         <ul>
             <li>Java</li>
+            <li>.Net</li>
             <li>Python</li>
+            <li>C++</li>
             <li>JavaScript</li>
+            <li>TypeScript</li>
             <li>SQL</li>
             <li>HTML & CSS</li>
         </ul>
